[gd_scene load_steps=11 format=3 uid="uid://cmp3mf2jobdek"]

[ext_resource type="Script" path="res://scenes/enemies/drone.gd" id="1_fwcf7"]
[ext_resource type="Shader" path="res://scenes/enemies/scout.gdshader" id="2_4l5es"]
[ext_resource type="Texture2D" uid="uid://bnjpkjtcnlocm" path="res://resources/graphics/enemies/drone.png" id="2_rhgly"]
[ext_resource type="Texture2D" uid="uid://6yf5m8lk20fa" path="res://resources/graphics/explosions/explosion_3.png" id="3_u6nvq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xmdwr"]
shader = ExtResource("2_4l5es")
shader_parameter/color = Color(0.776471, 0.309804, 0.301961, 1)
shader_parameter/progress = 0.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gaurj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jm86b"]
radius = 380.918

[sub_resource type="Animation" id="Animation_8wm3m"]
resource_name = "Explosion"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5, 0.533333, 0.566667, 0.6, 0.633333, 0.666667, 0.7, 0.733333, 0.766667, 0.8, 0.833333, 0.866667, 0.9, 0.933333, 0.966667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 62]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0666667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DroneSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0666667, 0.566667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:speed")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0666667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_hjl5b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DroneSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [400]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ra2iv"]
_data = {
"Explosion": SubResource("Animation_8wm3m"),
"RESET": SubResource("Animation_hjl5b")
}

[node name="Drone" type="CharacterBody2D" groups=["Entities"]]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_fwcf7")

[node name="DroneSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_xmdwr")
rotation = 1.5708
scale = Vector2(0.58, 0.58)
texture = ExtResource("2_rhgly")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(5, 5.7)
shape = SubResource("CapsuleShape2D_gaurj")

[node name="NoticeArea" type="Area2D" parent="."]
scale = Vector2(2.90816, 0.986872)

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoticeArea"]
scale = Vector2(0.649226, 2.00349)
shape = SubResource("CircleShape2D_jm86b")

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Explosion" type="Sprite2D" parent="."]
texture = ExtResource("3_u6nvq")
hframes = 8
vframes = 8
frame = 23

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ra2iv")
}

[connection signal="body_entered" from="NoticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="body_exited" from="NoticeArea" to="." method="_on_notice_area_body_exited"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
